samples/_failures_safe/1761211583_584e27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00659d12.c: In function ‘main’:
./samples/SAFE/__tmp_00659d12.c:158:17: error: expected expression at end of input
  158 |                 if (mat1.cols !=
      |                 ^~
./samples/SAFE/__tmp_00659d12.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00659d12.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00659d12.c:158:17: error: expected declaration or statement at end of input
